# mirra-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/radiology-v1/: corpus.jsonl  manifest.json  queries.jsonl
examples/: quickstart.py
scripts/: generate_radiology_benchmark.py
src/mirra/: __init__.py  benchmarks.py  client.py  dataset.py  judges.py  metrics.py  report.py
