[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirra"
version = "0.1.0"
description = "Mirra — evaluate retrieval & RAG agents inline. Bring your own agent, get scores in the response."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Mirra Health" }]
keywords = ["rag", "retrieval", "evaluation", "llm", "agents", "healthcare"]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["openai>=1.0", "anthropic>=0.40"]

[project.urls]
Homepage = "https://mirrahealth.io"

[tool.hatch.build.targets.wheel]
packages = ["src/mirra"]
