[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirra-eval"
version = "0.1.0"
description = "Mirra — evaluate retrieval & RAG agents inline. Bring your own agent, get scores in the response."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Mirra Health", email = "hello@mirrahealth.io" }]
keywords = ["rag", "retrieval", "evaluation", "llm", "agents", "healthcare"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["openai>=1.0", "anthropic>=0.40"]

[project.urls]
Homepage = "https://mirrahealth.io"
Repository = "https://github.com/mirrahealth/mirra-sdk"
Issues = "https://github.com/mirrahealth/mirra-sdk/issues"

# The importable package is `mirra`, even though the PyPI distribution is `mirra-eval`.
[tool.hatch.build.targets.wheel]
packages = ["src/mirra"]

[tool.hatch.build.targets.sdist]
include = ["src/mirra", "README.md", "LICENSE"]
